src/expressions/globalPluginsAnswersGrammar/antlrAnswersGrammarParser.java
// Generated from C:/Users/HP/Desktop/lapr4/lprog/antlr4_Java_LPROG/src/expressions/globalPluginsAnswersGrammar/antlrAnswersGrammar.g4 by ANTLR 4.13.1
package expressions.globalPluginsAnswersGrammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class antlrAnswersGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		END=1, ENDOFLINE=2, NUMERICALSCALEANSWER=3, NUMERIC_VALUE=4, BEFORE_VALUE_TOKEN=5, 
		NEWLINE=6, TYPE_TRUEFALSE=7, TYPE_TIMEHOUR=8, TYPE_DATE=9, TYPE_MULTIPLECHOICE=10, 
		TYPE_SINGLECHOICE=11, TYPE_NUMERICALSCALE=12, TYPE_DECIMAL=13, TYPE_INTEGER=14, 
		TYPE_SHORTTEXT=15, MAX_SHORT_TEXT_LENGHT=16, DATEANSWER=17, DECIMALANSWER=18, 
		TIMEHOURANSWER=19, INTEGERANSWER=20, TRUEFALSEANSWER=21, QUESTION=22, 
		SINGLECHOISEANSWER=23, SHORTTEXTANSWER=24, MULTIPLECHOISEANSWER=25, EMPTY=26, 
		STRING=27, CHAR=28, WS=29;
	public static final int
		RULE_start = 0, RULE_listOfQuestions = 1, RULE_questions = 2, RULE_question_tf = 3, 
		RULE_question_timehour = 4, RULE_question_date = 5, RULE_question_numericalscale = 6, 
		RULE_question_decimal = 7, RULE_question_integer = 8, RULE_question_shorttext = 9, 
		RULE_question_multiplechoice = 10, RULE_question_singlechoice = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "listOfQuestions", "questions", "question_tf", "question_timehour", 
			"question_date", "question_numericalscale", "question_decimal", "question_integer", 
			"question_shorttext", "question_multiplechoice", "question_singlechoice"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'END'", "';'", null, null, "'->'", null, "'(True/False)'", "'(HH:MM)'", 
			"'(Date:dd/mm/yyyy)'", "'(Multiple Choice)'", "'(Single Choice)'", "'(Range 1-5)'", 
			"'(Decimal Number)'", "'(Integer Number)'", "'(Short Text)'", "'10'", 
			null, null, null, null, null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "END", "ENDOFLINE", "NUMERICALSCALEANSWER", "NUMERIC_VALUE", "BEFORE_VALUE_TOKEN", 
			"NEWLINE", "TYPE_TRUEFALSE", "TYPE_TIMEHOUR", "TYPE_DATE", "TYPE_MULTIPLECHOICE", 
			"TYPE_SINGLECHOICE", "TYPE_NUMERICALSCALE", "TYPE_DECIMAL", "TYPE_INTEGER", 
			"TYPE_SHORTTEXT", "MAX_SHORT_TEXT_LENGHT", "DATEANSWER", "DECIMALANSWER", 
			"TIMEHOURANSWER", "INTEGERANSWER", "TRUEFALSEANSWER", "QUESTION", "SINGLECHOISEANSWER", 
			"SHORTTEXTANSWER", "MULTIPLECHOISEANSWER", "EMPTY", "STRING", "CHAR", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "antlrAnswersGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public antlrAnswersGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ListOfQuestionsContext listOfQuestions() {
			return getRuleContext(ListOfQuestionsContext.class,0);
		}
		public TerminalNode END() { return getToken(antlrAnswersGrammarParser.END, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			listOfQuestions();
			setState(25);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListOfQuestionsContext extends ParserRuleContext {
		public List<QuestionsContext> questions() {
			return getRuleContexts(QuestionsContext.class);
		}
		public QuestionsContext questions(int i) {
			return getRuleContext(QuestionsContext.class,i);
		}
		public ListOfQuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfQuestions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitListOfQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListOfQuestionsContext listOfQuestions() throws RecognitionException {
		ListOfQuestionsContext _localctx = new ListOfQuestionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listOfQuestions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(27);
				questions();
				}
				}
				setState(30); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==QUESTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionsContext extends ParserRuleContext {
		public Question_tfContext question_tf() {
			return getRuleContext(Question_tfContext.class,0);
		}
		public Question_timehourContext question_timehour() {
			return getRuleContext(Question_timehourContext.class,0);
		}
		public Question_dateContext question_date() {
			return getRuleContext(Question_dateContext.class,0);
		}
		public Question_multiplechoiceContext question_multiplechoice() {
			return getRuleContext(Question_multiplechoiceContext.class,0);
		}
		public Question_singlechoiceContext question_singlechoice() {
			return getRuleContext(Question_singlechoiceContext.class,0);
		}
		public Question_numericalscaleContext question_numericalscale() {
			return getRuleContext(Question_numericalscaleContext.class,0);
		}
		public Question_decimalContext question_decimal() {
			return getRuleContext(Question_decimalContext.class,0);
		}
		public Question_integerContext question_integer() {
			return getRuleContext(Question_integerContext.class,0);
		}
		public Question_shorttextContext question_shorttext() {
			return getRuleContext(Question_shorttextContext.class,0);
		}
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionsContext questions() throws RecognitionException {
		QuestionsContext _localctx = new QuestionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questions);
		try {
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				question_tf();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				question_timehour();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				question_date();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(35);
				question_multiplechoice();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(36);
				question_singlechoice();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(37);
				question_numericalscale();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(38);
				question_decimal();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(39);
				question_integer();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(40);
				question_shorttext();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_tfContext extends ParserRuleContext {
		public Token ctx_question;
		public Token ctx_type;
		public Token ctx_answer;
		public Token ctx_value;
		public List<TerminalNode> NEWLINE() { return getTokens(antlrAnswersGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(antlrAnswersGrammarParser.NEWLINE, i);
		}
		public TerminalNode BEFORE_VALUE_TOKEN() { return getToken(antlrAnswersGrammarParser.BEFORE_VALUE_TOKEN, 0); }
		public TerminalNode ENDOFLINE() { return getToken(antlrAnswersGrammarParser.ENDOFLINE, 0); }
		public TerminalNode QUESTION() { return getToken(antlrAnswersGrammarParser.QUESTION, 0); }
		public TerminalNode TYPE_TRUEFALSE() { return getToken(antlrAnswersGrammarParser.TYPE_TRUEFALSE, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(antlrAnswersGrammarParser.NUMERIC_VALUE, 0); }
		public TerminalNode TRUEFALSEANSWER() { return getToken(antlrAnswersGrammarParser.TRUEFALSEANSWER, 0); }
		public TerminalNode EMPTY() { return getToken(antlrAnswersGrammarParser.EMPTY, 0); }
		public Question_tfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_tf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestion_tf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_tfContext question_tf() throws RecognitionException {
		Question_tfContext _localctx = new Question_tfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_question_tf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			((Question_tfContext)_localctx).ctx_question = match(QUESTION);
			setState(44);
			((Question_tfContext)_localctx).ctx_type = match(TYPE_TRUEFALSE);
			setState(45);
			match(NEWLINE);
			setState(46);
			((Question_tfContext)_localctx).ctx_answer = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==TRUEFALSEANSWER || _la==EMPTY) ) {
				((Question_tfContext)_localctx).ctx_answer = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(47);
			match(BEFORE_VALUE_TOKEN);
			setState(48);
			((Question_tfContext)_localctx).ctx_value = match(NUMERIC_VALUE);
			setState(49);
			match(ENDOFLINE);
			setState(50);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_timehourContext extends ParserRuleContext {
		public Token ctx_question;
		public Token ctx_type;
		public Token ctx_answer;
		public Token ctx_value;
		public List<TerminalNode> NEWLINE() { return getTokens(antlrAnswersGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(antlrAnswersGrammarParser.NEWLINE, i);
		}
		public TerminalNode BEFORE_VALUE_TOKEN() { return getToken(antlrAnswersGrammarParser.BEFORE_VALUE_TOKEN, 0); }
		public TerminalNode ENDOFLINE() { return getToken(antlrAnswersGrammarParser.ENDOFLINE, 0); }
		public TerminalNode QUESTION() { return getToken(antlrAnswersGrammarParser.QUESTION, 0); }
		public TerminalNode TYPE_TIMEHOUR() { return getToken(antlrAnswersGrammarParser.TYPE_TIMEHOUR, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(antlrAnswersGrammarParser.NUMERIC_VALUE, 0); }
		public TerminalNode TIMEHOURANSWER() { return getToken(antlrAnswersGrammarParser.TIMEHOURANSWER, 0); }
		public TerminalNode EMPTY() { return getToken(antlrAnswersGrammarParser.EMPTY, 0); }
		public Question_timehourContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_timehour; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestion_timehour(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_timehourContext question_timehour() throws RecognitionException {
		Question_timehourContext _localctx = new Question_timehourContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_question_timehour);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((Question_timehourContext)_localctx).ctx_question = match(QUESTION);
			setState(53);
			((Question_timehourContext)_localctx).ctx_type = match(TYPE_TIMEHOUR);
			setState(54);
			match(NEWLINE);
			setState(55);
			((Question_timehourContext)_localctx).ctx_answer = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==TIMEHOURANSWER || _la==EMPTY) ) {
				((Question_timehourContext)_localctx).ctx_answer = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(56);
			match(BEFORE_VALUE_TOKEN);
			setState(57);
			((Question_timehourContext)_localctx).ctx_value = match(NUMERIC_VALUE);
			setState(58);
			match(ENDOFLINE);
			setState(59);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_dateContext extends ParserRuleContext {
		public Token ctx_question;
		public Token ctx_type;
		public Token ctx_answer;
		public Token ctx_value;
		public List<TerminalNode> NEWLINE() { return getTokens(antlrAnswersGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(antlrAnswersGrammarParser.NEWLINE, i);
		}
		public TerminalNode BEFORE_VALUE_TOKEN() { return getToken(antlrAnswersGrammarParser.BEFORE_VALUE_TOKEN, 0); }
		public TerminalNode ENDOFLINE() { return getToken(antlrAnswersGrammarParser.ENDOFLINE, 0); }
		public TerminalNode QUESTION() { return getToken(antlrAnswersGrammarParser.QUESTION, 0); }
		public TerminalNode TYPE_DATE() { return getToken(antlrAnswersGrammarParser.TYPE_DATE, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(antlrAnswersGrammarParser.NUMERIC_VALUE, 0); }
		public TerminalNode DATEANSWER() { return getToken(antlrAnswersGrammarParser.DATEANSWER, 0); }
		public TerminalNode EMPTY() { return getToken(antlrAnswersGrammarParser.EMPTY, 0); }
		public Question_dateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_date; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestion_date(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_dateContext question_date() throws RecognitionException {
		Question_dateContext _localctx = new Question_dateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_question_date);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			((Question_dateContext)_localctx).ctx_question = match(QUESTION);
			setState(62);
			((Question_dateContext)_localctx).ctx_type = match(TYPE_DATE);
			setState(63);
			match(NEWLINE);
			setState(64);
			((Question_dateContext)_localctx).ctx_answer = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==DATEANSWER || _la==EMPTY) ) {
				((Question_dateContext)_localctx).ctx_answer = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(65);
			match(BEFORE_VALUE_TOKEN);
			setState(66);
			((Question_dateContext)_localctx).ctx_value = match(NUMERIC_VALUE);
			setState(67);
			match(ENDOFLINE);
			setState(68);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_numericalscaleContext extends ParserRuleContext {
		public Token ctx_question;
		public Token ctx_type;
		public Token ctx_answer;
		public Token ctx_value;
		public List<TerminalNode> NEWLINE() { return getTokens(antlrAnswersGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(antlrAnswersGrammarParser.NEWLINE, i);
		}
		public TerminalNode BEFORE_VALUE_TOKEN() { return getToken(antlrAnswersGrammarParser.BEFORE_VALUE_TOKEN, 0); }
		public TerminalNode ENDOFLINE() { return getToken(antlrAnswersGrammarParser.ENDOFLINE, 0); }
		public TerminalNode QUESTION() { return getToken(antlrAnswersGrammarParser.QUESTION, 0); }
		public TerminalNode TYPE_NUMERICALSCALE() { return getToken(antlrAnswersGrammarParser.TYPE_NUMERICALSCALE, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(antlrAnswersGrammarParser.NUMERIC_VALUE, 0); }
		public TerminalNode NUMERICALSCALEANSWER() { return getToken(antlrAnswersGrammarParser.NUMERICALSCALEANSWER, 0); }
		public TerminalNode EMPTY() { return getToken(antlrAnswersGrammarParser.EMPTY, 0); }
		public Question_numericalscaleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_numericalscale; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestion_numericalscale(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_numericalscaleContext question_numericalscale() throws RecognitionException {
		Question_numericalscaleContext _localctx = new Question_numericalscaleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_question_numericalscale);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((Question_numericalscaleContext)_localctx).ctx_question = match(QUESTION);
			setState(71);
			((Question_numericalscaleContext)_localctx).ctx_type = match(TYPE_NUMERICALSCALE);
			setState(72);
			match(NEWLINE);
			setState(73);
			((Question_numericalscaleContext)_localctx).ctx_answer = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==NUMERICALSCALEANSWER || _la==EMPTY) ) {
				((Question_numericalscaleContext)_localctx).ctx_answer = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(74);
			match(BEFORE_VALUE_TOKEN);
			setState(75);
			((Question_numericalscaleContext)_localctx).ctx_value = match(NUMERIC_VALUE);
			setState(76);
			match(ENDOFLINE);
			setState(77);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_decimalContext extends ParserRuleContext {
		public Token ctx_question;
		public Token ctx_type;
		public Token ctx_answer;
		public Token ctx_value;
		public List<TerminalNode> NEWLINE() { return getTokens(antlrAnswersGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(antlrAnswersGrammarParser.NEWLINE, i);
		}
		public TerminalNode BEFORE_VALUE_TOKEN() { return getToken(antlrAnswersGrammarParser.BEFORE_VALUE_TOKEN, 0); }
		public TerminalNode ENDOFLINE() { return getToken(antlrAnswersGrammarParser.ENDOFLINE, 0); }
		public TerminalNode QUESTION() { return getToken(antlrAnswersGrammarParser.QUESTION, 0); }
		public TerminalNode TYPE_DECIMAL() { return getToken(antlrAnswersGrammarParser.TYPE_DECIMAL, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(antlrAnswersGrammarParser.NUMERIC_VALUE, 0); }
		public TerminalNode DECIMALANSWER() { return getToken(antlrAnswersGrammarParser.DECIMALANSWER, 0); }
		public TerminalNode EMPTY() { return getToken(antlrAnswersGrammarParser.EMPTY, 0); }
		public Question_decimalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_decimal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestion_decimal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_decimalContext question_decimal() throws RecognitionException {
		Question_decimalContext _localctx = new Question_decimalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_question_decimal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((Question_decimalContext)_localctx).ctx_question = match(QUESTION);
			setState(80);
			((Question_decimalContext)_localctx).ctx_type = match(TYPE_DECIMAL);
			setState(81);
			match(NEWLINE);
			setState(82);
			((Question_decimalContext)_localctx).ctx_answer = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==DECIMALANSWER || _la==EMPTY) ) {
				((Question_decimalContext)_localctx).ctx_answer = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(83);
			match(BEFORE_VALUE_TOKEN);
			setState(84);
			((Question_decimalContext)_localctx).ctx_value = match(NUMERIC_VALUE);
			setState(85);
			match(ENDOFLINE);
			setState(86);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_integerContext extends ParserRuleContext {
		public Token ctx_question;
		public Token ctx_type;
		public Token ctx_answer;
		public Token ctx_value;
		public List<TerminalNode> NEWLINE() { return getTokens(antlrAnswersGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(antlrAnswersGrammarParser.NEWLINE, i);
		}
		public TerminalNode BEFORE_VALUE_TOKEN() { return getToken(antlrAnswersGrammarParser.BEFORE_VALUE_TOKEN, 0); }
		public TerminalNode ENDOFLINE() { return getToken(antlrAnswersGrammarParser.ENDOFLINE, 0); }
		public TerminalNode QUESTION() { return getToken(antlrAnswersGrammarParser.QUESTION, 0); }
		public TerminalNode TYPE_INTEGER() { return getToken(antlrAnswersGrammarParser.TYPE_INTEGER, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(antlrAnswersGrammarParser.NUMERIC_VALUE, 0); }
		public TerminalNode INTEGERANSWER() { return getToken(antlrAnswersGrammarParser.INTEGERANSWER, 0); }
		public TerminalNode EMPTY() { return getToken(antlrAnswersGrammarParser.EMPTY, 0); }
		public Question_integerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_integer; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof antlrAnswersGrammarVisitor ) return ((antlrAnswersGrammarVisitor<? extends T>)visitor).visitQuestion_integer(this);
			else return visitor.visitChildren(this);
		}
	}
